--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -265,25 +265,6 @@ São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia 
 
 Para definir os objetivos estratégicos de TIC do Ministério da Cultura, utilizou-se como referência a Estratégia de Governança Digital do Governo Federal, a Estratégia Organizacional, bem como inspiração na metodologia do Balanced Scorecard de TIC, como orientado pela ISACA e com base no BSC tradicional. Ressalta-se, porém, que as dimensões estratégicas foram orientadas para o cenário organizacional onde a TIC se encontra. Dessa forma, definiu-se os objetivos estratégicos de TIC do Ministério da Cultura descritos abaixo:
 
-
-
-
-| Perspectiva                   | Objetivo Estratégico                                                                                                   | 
-|-------------------------------|------------------------------------------------------------------------------------------------------------------------| 
-| Orientado ao Cidadão          | **OE.01** - Ampliar a oferta de serviços digitais de forma a potencializar as políticas públicas culturais             | 
-|| **OE.02** - Fomentar a abertura de dados e estimular a participação social na construção de melhores serviços públicos | 
-| Processos e Usuários Internos | **OE.03** - Aumentar o nível de maturidade dos processos de TIC                                                        | 
-|| **OE.04** - Estimular a Gestão do Conhecimento no MinC                                                                 | 
-|| **OE.05** - Aprimorar práticas de gestão da qualidade dos serviços de TIC                                              | 
-| Orientado aos Recursos        | **OE.06** - Compartilhar e integrar dados, processos, sistemas, serviços e infraestrutura de TIC com outros órgãos     | 
-| Inovação e Crescimento        | **OE.07** - Modernizar e ampliar a estrutura funcional da área de TIC                                                  | 
-|| **OE.08** - Potencializar o uso de inteligência artificial e ciência de dados no desenvolvimento de soluções de TIC    | 
-|| **OE.09** - Estimular o uso e compartilhamento de tecnologias livres                                                   | 
-|| **OE.10** – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades         | 
-
-
-
-
 #### Orientado ao Cidadão
 - **OE.01** - Ampliar a oferta de serviços digitais de forma a potencializar as políticas públicas culturais
 - **OE.02** - Fomentar a abertura de dados e estimular a participação social na construção de melhores serviços públicos
@@ -302,12 +283,28 @@ Para definir os objetivos estratégicos de TIC do Ministério da Cultura, utiliz
 - **OE.09** - Estimular o uso e compartilhamento de tecnologias livres
 - **OE.10** – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades
 
-
-
-
 ## 4.6 Plano de Metas e Indicadores de TIC
 
-reformular com base nos antigos.
+As metas estabelecidas ajudam a direcionar as ações de TIC com foco nos seus objetivos estratégicos. As metas aqui definidas deverão ser monitoradas pelo Comitê de Governança Digital - CGD, e poderão ser alteradas a qualquer momento por aquele Comitê. A tabela abaixo demonstra as metas e indicadores a serem monitorados, no período proposto, para garantir a persecução dos objetivos estratégicos de TIC:
+
+| Objetivo Estratégico                                                                                               | Indicador                                                                                                    | Meta                                        | 
+|--------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|---------------------------------------------| 
+| OE.01 – Ampliar a oferta de serviços digitais de forma a potencializar políticas públicas culturais                | Número de serviços digitais integrados à Plataforma de Cidadania Digital                                     | **2018**: 2 	**2019**: 4 	**2020**: 6   | 
+| OE.02 - Fomentar a abertura de dados e estimular a participação social na construção de melhores serviços públicos | Índice de implementação das ações do Plano de Dados Abertos do Sistema MinC                                  | **2018**: % 	**2019**: % 	**2020**: %   | 
+| OE.03 - Aprimorar o nível de maturidade dos processos de TIC                                                       | Número de processos de TIC mapeados e executados                                                             | **2018**: 3 	**2019**: 6 	**2020**: 9   | 
+| OE.04 - Estimular a Gestão do Conhecimento no MinC                                                                 | Quantidade de Wikis ou outras plataformas digitais disponibilizadas às áreas do MinC                         | **2018**: 4 	**2019**: 6  	**2020**: 8   | 
+| OE.05 - Aprimorar práticas de gestão da qualidade dos serviços de TIC                                              | Média anual do índice de satisfação do canal de atendimento dos usuários de TIC                              | **2018**: 90% **2019**: 93% 	**2020**: 97% | 
+|                                                                                                                    | Nota da pesquisa anual de satisfação com os serviços de TIC (Escala de 1 a 5)                                | **2018**: 3,5 **2019**: 4,0 	**2020**: 4,2 | 
+|                                                                                                                    | Média anual do índice de satisfação dos usuários com relação aos sistemas desenvolvimentos (Escala de 1 a 5) | **2018**: 3,0 **2019**: 3,5 	**2020**: 4,0 | 
+| OE.06 - Compartilhar e integrar dados, processos, sistemas, serviços e infraestrutura de TIC com outros órgãos     | Quantidade de órgãos de cultura estaduais e municipais com que o MinC compartilha recursos de TIC            | **2018**: 40 	**2019**: 60 	**2020**: 80  | 
+|                                                                                                                    | Quantidade de órgãos do SISP com que o MinC compartilha recursos de TIC                                      | **2018**: 2 	**2019**: 4 	**2020**: 6   | 
+| OE.07 - Modernizar e ampliar a estrutura funcional da área de TIC                                                  | Servidores com formação superior na área de TIC                                                              | **2018**: 12 	**2019**: 14 	**2020**: 18  | 
+|                                                                                                                    | Quantidade de capacitações realizadas por servidores da área de TIC                                          | **2018**: 8 	**2019**:  10 	**2020**: 12  | 
+|                                                                                                                    | Divisão funcional dentro da área de TIC com cargo de gestão                                                  | **2018**:  6 	**2019**: 10 	**2020**: 13  | 
+| OE.08 - Potencializar o uso de inteligência artificial e ciência de dados no desenvolvimento de soluções de TIC    | Número de assistentes virtuais implantados em sistemas do MinC                                               | **2018**: 1 	**2019**: 2 	**2020**: 3   | 
+| OE.09 - Estimular o uso e compartilhamento de tecnologias livres                                                   | Número de novas soluções disponibilizadas em repositórios abertos                                            | **2018**: 30 	**2019**: 30 	**2020**: 30  | 
+| OE.10 – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades         | Quantidade de projetos desenvolvimentos em parcerias com universidades                                       | **2018**: 6 	**2019**: 12 	**2020**: 18  | 
+|                                                                                                                    | Implementação de nova Metodologia de Software                                                                | **2018**: 10% **2019**: 40% 	**2020**: 50% | 
 
 ## 4.7 Estratégia do Comitê Integrado de Tecnologia da Informação **CITIC**
 
