--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -401,11 +401,7 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 
 A elaboração deste PDTIC orientou-se pelas boas práticas estabelecidas no documento Guia de PDTIC do SISP. O fluxo de execução do projeto de elaboração seguiu o modelo proposto pela Secretaria de Tecnologia da Informação e Comunicação – SETIC do Ministério do Planejamento, por meio da metodologia que orienta a realização em três fases principais:
 
-```mermaid
-graph LR
-A(Preparação) --> B(Diagnóstico)
-B --> C(Planejamento)
-```
+![abc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/abc.png "Metodologia de Elaboração do PDTIC.")
 
 ## 5.1 Preparação
 
