Atualizado Plano gestao pessoas
Atualizado Plano gestao pessoas

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -764,42 +764,27 @@ A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTE
 | Total            | 18         | 57            | 7           | 82    | 
 | Distribuição (%) | 21,95 %    | 69,51 %       | 8,54 %      |       | 
 
-Os servidores da CGTEC dedicam maior parte de seu tempo no planejamento das contratações e na gestão dos contratos, sendo as atividades operacionais basicamente terceirizadas.
+Os servidores da CGTEC dedicam maior parte de seu tempo ao planejamento das contratações e à gestão dos contratos, sendo as atividades operacionais basicamente terceirizadas.
 
-Como vem sendo diagnosticado em planejamentos anteriores, a quantidade de servidores para a gestão dessa unidade de TIC é pequena, sendo necessário aumentar o quadro da CGTEC, por meio da solicitação de novos Analistas em Tecnologia da Informação ao Ministério do Planejamento, Desenvolvimento e Gestão, ou ainda da alocação de servidores efetivos do MinC na CGTEC.
+Como vem sendo diagnosticado em planejamentos anteriores, a quantidade de servidores para a gestão dessa unidade de TIC é pequena, sendo necessário aumentar o quadro da CGTEC por meio da solicitação de novos Analistas em Tecnologia da Informação ao Ministério do Planejamento, Desenvolvimento e Gestão, e/ou com a alocação de servidores efetivos do MinC na CGTEC.
 
-Devido à reformulação da estrutura de cargos do MinC, ocorrida em 2016, a estrutura da CGTEC foi reduzida perdendo a Coordenação de Governança e cargos de chefia, cujo retorno vem sendo reivindicado para o melhor funcionamento da unidade.
+Para agravar ainda mais a situação de carência de recursos humanos na CGTEC, com a reformulação da estrutura de cargos do MinC, ocorrida em 2016, a CGTEC teve um impacto significativo no seu organograma ao perder cargos de chefia sendo o mais impactante deles a Coordenação de Governança, cujo retorno vem sendo reivindicado para o melhor funcionamento da unidade.
 
 De acordo com o guia de PDTIC do SISP, “o planejamento de TIC apoia a realização de uma gestão efetiva de recursos. Isto se refere a melhor utilização possível dos investimentos e o apropriado gerenciamento dos recursos críticos de TIC: aplicativos, processos, informações, infraestrutura e pessoas.”
 
 ## 10.1 Plano de Capacitação da TIC do MinC
 
-O público-alvo do Plano de Capacitação da TIC do MinC são todos os servidores, efetivos e comissionados, que compõem a estrutura e força de trabalho da CGTEC no âmbito do Ministério da Cultura.
+Todos os servidores, efetivos e comissionados, que compõem a estrutura e força de trabalho da CGTEC no âmbito do Ministério da Cultura compõem o público-alvo do Plano de Capacitação da TIC do MinC.
 
-O objetivo geral do referido Plano de Capacitação consiste em melhorar a eficiência e a qualidade dos serviços prestados pela CGTEC a seus públicos por meio da capacitação permanente e incentivo ao desenvolvimento profissional dos servidores da CGTEC a fim de que possam desenvolver as competências requeridas para o alcance dos objetivos da CGTEC e com isso contribuir efetivamente para o alcance dos objetivos do MinC.
+O objetivo geral do Plano de Capacitação consiste em melhorar a eficiência e a qualidade dos serviços prestados pela CGTEC a seus públicos por meio da capacitação permanente e incentivo ao desenvolvimento profissional dos servidores da CGTEC a fim de que possam desenvolver as competências requeridas para o alcance dos objetivos da CGTEC e com isso contribuir efetivamente para o alcance dos objetivos do MinC.
 
-Os objetivos específicos são:
+Os objetivos específicos do Plano são:
 
 1. Promover o desenvolvimento das competências e habilidades do servidor da CGTEC necessárias ao bom desempenho de suas atividades;
 1. Ofertar ações de capacitação adequando as competências requeridas dos servidores da CGTEC aos objetivos institucionais;
 1. Contribuir para o desenvolvimento integral do servidor, proporcionando atuação funcional mais eficiente e eficaz, e consequentemente melhoria na qualidade do trabalho.
 
-Sob a perspectiva de Orientação Futura, o Plano de Capacitação da CGTEC está diretamente relacionado com o Objetivo Estratégico da TIC de nº 6 que é “Garantir desenvolvimento de competências na força de trabalho de TI” cuja descrição segue como:
-
-> “Prover os recursos humanos necessários ao bom desempenho das atividades e promover o desenvolvimento de conhecimento, habilidades e atitudes de forma a fortalecer as ações de gestão, fiscalização, monitoramento e controle de serviços de TI.” (PETI-2014-2016)
-
-Tal perspectiva tem como Iniciativas Estratégicas:
-
-- **IE 6.1** Adotar medidas para alcance e manutenção de percentual mínimo da força de trabalho (efetivos, comissionados e terceirizados) compatível com a demanda de TIC.
-- **IE 6.2** Promover o desenvolvimento de competências de TIC.
-
-| Indicador                          | Meta                                                                                            | 
-|------------------------------------|-------------------------------------------------------------------------------------------------| 
-| Plano interno de força de trabalho | Estabelecer um plano com medidas para garantir força de trabalho compatível com a demanda de TIC | 
-| Banco de competência               | Elaborar e manter um banco de competências                                                      | 
-| Plano de capacitação               | Estabelecer um Plano de Capacitação com propostas anuais de treinamento                         | 
-
-A CGTEC, quando for o caso, viabilizará capacitações “In Company”, a fim de capacitar o maior número de servidores da área ao mesmo tempo dentro da própria instituição acerca de temas estratégicos de TIC.
+Quando for o caso, a CGTEC viabilizará capacitações “In Company”, a fim de capacitar o maior número de servidores da área, ao mesmo tempo, dentro da própria instituição em temas estratégicos para a TIC do MinC.
 
 ## 10.2 Necessidade de Capacitação Específica para a equipe da CGTEC 
 
