--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -82,7 +82,7 @@ Os instrumentos de monitoramento e controle da gestão da unidade de TIC, como o
 No período proposto por este planejamento, a CGTIC do Ministério da Cultura se coloca no desafio de modernizar os métodos de gestão, e se aproximar do estado da arte e da tecnologia para conseguir prover soluções inovadoras, não apenas para os seus usuários, mas também para o conjunto do Governo Federal, permitindo-se compartilhar novas experiências e soluções em busca de um modelo de gestão corporativa de Tecnologia da Informação para a Administração Pública Federal, mais eficiente, ágil e responsivo.
 
 ## Histórico de Versões
-Link para o GITHUB?
+0.1 - Tag
 
 ## **Sumário**
 
@@ -111,23 +111,19 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 
 # 2  TERMOS E ABREVIAÇÕES
 - **MinC** Ministério da Cultura
+- **SGE** - Subsecretaria de Gestão Estratégica
 - **CGD** Comitê de Governança Digital
 - **CGTIC** Coordenação-Geral de Infraestrutura Tecnológica
 - **TIC** Tecnologia da Informação e Comunicações
 - **PDTIC** Plano Diretor de Tecnologia da Informação e Comunicações
 - **CITIC** Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas
 - **SISP** Sistema de Administração dos Recursos de Tecnologia da Informação do Poder Executivo Federal
+- **MGP-TI** Metodologia de Gestão de Projetos de TIC
 - **PEI** Planejamento Estratégico Institucional
 - **PPA** Plano Plurianual
 - **LOA** Lei Orçamentária Anual
 - **LDO** Lei de Diretrizes Orçamentárias
-- **ANCINE** Agência Nacional do Cinema 
-- **FBN** Fundação Biblioteca Nacional
-- **FCRB** Fundação Casa de Rui Barbosa 
-- **FCP** Fundação Cultural Palmares
-- **FUNARTE** Fundação Nacional de Artes  
-- **IBRAM** Instituto Brasileiro de Museus 
-- **IPHAN** Instituto do Patrimônio Histórico e Artístico Nacional
+
 
 # 3 ORGANIZAÇÃO DA TIC 
 
