--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -102,7 +102,7 @@ Este trabalho é fruto de um processo participativo de coleta de dados, análise
 A execução deste Plano Diretor dar-se-á no período de 2018 a 2020, devendo ser analisado semestralmente pelo Comitê de Governança Digital - CGD para acompanhamento da execução, e, conforme análise, propor-se-á alterações de priorização. 
 
 ## 1.1 Estrutura Organizacional
-Atual estrutura regimental do MinC é regida pelo Decreto nº 8.837, de 17 de agosto de 2016:
+Atual estrutura regimental do MinC é regida pelo Decreto nº 9.411, de 18 de Junho de 2018:
 
 ![orgminc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/orgminc.jpg "Estrutura Organizacional do MinC.")
 
@@ -127,7 +127,7 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 
 # 3 ORGANIZAÇÃO DA TIC 
 
-A Coordenação-Geral de Infraestrutura Tecnológica – CGTIC é uma unidade subordinada à Subsecretaria de Gestão Estratégica – SGE que, por sua vez, é órgão setorial do Sistema de Administração dos Recursos de Informação e Informática – SISP. A SGE tem suas atribuições definidas no Decreto nº 8.837, de 17 de agosto de 2016.
+A Coordenação-Geral de Infraestrutura Tecnológica – CGTIC é uma unidade subordinada à Subsecretaria de Gestão Estratégica – SGE que, por sua vez, é órgão setorial do Sistema de Administração dos Recursos de Informação e Informática – SISP. A SGE tem suas atribuições definidas no Decreto nº 9.411, de 18 de Junho de 2018.
 
 À CGTIC compete normatizar, planejar, coordenar, orientar, executar, e avaliar o desenvolvimento de planos, programas e processos referentes à gestão dos recursos de Tecnologia da Informação, segurança da informação e comunicações no âmbito do Ministério da Cultura.
 
@@ -137,9 +137,9 @@ A atual posição da CGTIC na estrutura do MinC está apresentada abaixo:
 
 ![cgtecnominc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecnominc.png "Posição da CGTIC no MINC.")
 
-Após a reestruturação do MinC, promovida pelo Decreto nº 8.837, de 17 de agosto de 2016, a estrutura da CGTIC fica sofreu reduções em seu quadro de servidores, conforme pode ser visto abaixo.
+Após a reestruturação do MinC, promovida pelo Decreto nº 9.411, de 18 de Junho de 2018., a estrutura da CGTIC fica sofreu reduções em seu quadro de servidores, conforme pode ser visto abaixo.
 
-![cgtecatual](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecatual.png "Estrutura Atual da CGTIC.")
+![cgtecatual](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtic.jpg "Estrutura Atual da CGTIC.")
 
 Ressalta-se que a estrutura atual da CGTIC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 5, ou seja, uma redução na ordem de 58%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TIC executados concorrentemente, como pode ser constatado no histórico deste plano.
 
