--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -137,11 +137,11 @@ A atual posição da CGTIC na estrutura do MinC está apresentada abaixo:
 
 ![cgtecnominc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecnominc.png "Posição da CGTIC no MINC.")
 
-Após a reestruturação do MinC, promovida pelo Decreto nº 9.411, de 18 de Junho de 2018., a estrutura da CGTIC fica sofreu reduções em seu quadro de servidores, conforme pode ser visto abaixo.
+Após a reestruturação do MinC, promovida pelo Decreto nº 9.411, de 18 de Junho de 2018, a atual estrutura da CGTIC está apresentada abaixo:
 
 ![cgtecatual](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtic.jpg "Estrutura Atual da CGTIC.")
 
-Ressalta-se que a estrutura atual da CGTIC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 5, ou seja, uma redução na ordem de 58%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TIC executados concorrentemente, como pode ser constatado no histórico deste plano.
+Ressalta-se que a estrutura da CGTIC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016, e após pelo decreto Decreto nº 9.411, de 18 de Junho de 2018. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 6, ou seja, uma redução na ordem de 50%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TIC executados concorrentemente, como pode ser constatado no histórico deste plano.
 
 ## 3.1 Proposta de estrutura organizacional
 
@@ -155,9 +155,7 @@ A especialização da Coordenação de Infraestrutura tem por objetivo garantir 
 
 A Coordenação de Governança precisa ampliar suas competências. Se faz urgente a criação de um escritório de aquisições, que seja capaz de monitorar os contratos em andamento, e também seja capaz de planejar de forma qualificada novas aquisições e aditivos contratuais. A falta dessa unidade trás essa responsabilidade para o Coordenador-Geral, o que gera um perigoso risco por não ter na unidade ninguém especializado no tema, tão sensível para o funcionamento da mesma. A criação do escritório de processos por sua vez faz parte da implantação de um ciclo contínuo de amadurecimento dos processos de TIC, desta forma, a qualidade e a segurança dos processos internos se tornará cada vez maior, de forma monitorada e planejada para atender as necessidades do órgão.
 
-Por entender que os desafios da TIC do MinC não são apenas de ordem natural, mas por vezes transcendem os modelos corporativos conhecidos, sugerimos aqui a criação de uma Coordenação de Inovação, capaz de gerar novos conhecimentos, práticas, métodos e tecnologias livres, capazes de agregar valor às entregas realizadas pela unidade, olhando sempre para a possibilidade de surpreender seus usuários e romper com as limitações burocráticas do modelo de gestão coorporativa da TI.
-
-Por fim, sugere-se a inclusão da competência de comunicação na unidade, transformando-a em “Coordenação-Geral de Tecnologias da Informação e Comunicação”, acrescentando de forma clara a responsabilidade que já existe na unidade, de fazer a gestão e disponibilizar os serviços de infraestrutura de comunicação via internet, telefonia fixa, móvel e comutada, para todos os usuários do Ministério.
+Por entender que os desafios da TIC do MinC não são apenas de ordem natural, mas por vezes transcendem os modelos corporativos conhecidos, sugere-se aqui a criação de uma Coordenação de Inovação, capaz de gerar novos conhecimentos, práticas, métodos e tecnologias livres, capazes de agregar valor às entregas realizadas pela unidade, olhando sempre para a possibilidade de surpreender seus usuários e romper com as limitações burocráticas do modelo de gestão coorporativa da TI.
 
 # 4  REFERENCIAL ESTRATÉGICO
 
