--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -9,54 +9,43 @@
 Sérgio Sá Leitão  
 **Ministro da Cultura**
 
-Mariana Ribas  
+Claudia Maria Mendes de Almeida Pedrozo 
 **Secretária-Executiva**
 
 Lucineide Alves de Oliveira Medeiros da Costa  
 **Subsecretária de Gestão Estratégica**
 
-Felipe Caldeira Marron da Rocha  
+Sérgio Thiago Moreira
 **Subsecretário de Planejamento, Orçamento e Administração**
 
 Paulo Henrique de Carvalho Moreira 
 **Coordenador-Geral de Infraestrutura Tecnológica**
 
 **Comitê de Governança Digital - CGD:**  
+Chefe de Gabinete do Ministro:
+Ângela Inácio - Titular
 
-Chefe de Gabinete do Ministro;
-Secretário da Diversidade Cultural;
-Secretário do Audiovisual;
-Secretário da Economia Criativa;
-Secretário de Fomento e Incentivo à Cultura;
-Secretário de Difusão e Infraestrutura Cultural; e
-Secretário de Direitos Autorais e Propriedade Intelectual.
+Secretário da Diversidade Cultural:
+Magali  Moura - Titular
 
+Secretário do Audiovisual:
+Frederico Maia Mascarenhas - Titular
+eber Moura Trigueiro - Suplente
 
+Secretário da Economia Criativa:
+Douglas Ramiro Capelo - Titular
+José Mauro Gana Fini - Suplente
 
-Secretaria de Articulação e Desenvolvimento Institucional:  
-Magali Guedes de Magela Moura - Titular  
-Teresa Cristina Rocha Azevedo de Oliveira - Suplente 
+Secretário de Fomento e Incentivo à Cultura:
+José Paulo Soares Martins - Titular
+decir Luiz Prata da Costa - Suplente
 
-Secretaria do Audiovisual:  
-João Batista da Silva - Titular  
-Sorahia Maria Segall - Suplente  
+Secretário de Difusão e Infraestrutura Cultural:
+Paulo Nakamura - Suplente
 
-Secretaria da Cidadania e da Diversidade Cultural:  
-Débora Fernanda Pinto Albuquerque - Titular  
-Cristiano Vasconcelos da Silva - Suplente  
-
-Secretaria da Economia da Cultura: 
-Mansur Abunasser Bassit - Titular  
-Lucas Mastellaro Baruzzi​ - Suplente 
-
-Secretaria de Fomento e Incentivo à Cultura:  
-José Paulo Soares Martins - Titular  
-Jorge Oliveira Linhares Arruda  - Suplente   
-
-Secretaria de Infraestrutura Cultural:  
-Antonio Alfredo Bertini de Torres Bandeira - Titular  
-Paulo Edy Nakamura - Suplente  
-
+Secretário de Direitos Autorais e Propriedade Intelectual:
+Marcos Tavolari - Titular
+Silvana Demartini de Oliveira - Suplente
  
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
@@ -66,7 +55,6 @@ Munique Braz Coutinho
 Jonas Jeske  
 Sebastião Lima Filho  
 Wuarli Ceza Santos
-
 
 ## Apresentação
 O presente Plano Diretor tem por objetivo manter o alinhamento entre a unidade de TIC do Ministério da Cultura e suas áreas de negócio, buscando assim proporcionar maior eficiência para a utilização dos recursos de TIC, no alcance dos objetivos estratégicos deste Ministério.
@@ -114,6 +102,11 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 - **SGE** - Subsecretaria de Gestão Estratégica
 - **CGD** Comitê de Governança Digital
 - **CGTIC** Coordenação-Geral de Infraestrutura Tecnológica
+- **CGOTI** Coordenação de Governança de Tecnologia da Informação e Comunicação
+- **COINT** Coordenação de Infraestrutura Tecnológica
+- **COSIS** Coordenação de Sistemas de Informação
+- **DPTIC** Divisão de Projetos e Contratações de Tecnologia da Informação e Comunicação 
+- **DITEL** Divisão de Telefonia
 - **TIC** Tecnologia da Informação e Comunicações
 - **PDTIC** Plano Diretor de Tecnologia da Informação e Comunicações
 - **CITIC** Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas
@@ -722,7 +715,7 @@ A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTI
 |------------------|------------|---------------|-------------|-------| 
 | CGTIC            | 5          | 3             | 0           | 8     | 
 | COINT            | 3          | 30            | 1           | 34    | 
-| COSIN            | 2          | 14            | 9           | 22    | 
+| COSIS            | 2          | 14            | 9           | 22    | 
 | Total            | 10         | 47            | 10          | 67    | 
 | Distribuição (%) | 14,95%     | 70,1%         | 14,95%      |       | 
 
@@ -736,7 +729,7 @@ A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTI
 | CGTIC            | 1          | 2             | 1           | 4     | 
 | COINT            | 4          | 49            | 1           | 54    | 
 | COSIS            | 3          | 11            | 4           | 18    | 
-| CGOVE            | 4          | 3             | 0           | 7     | 
+| CGOTI            | 4          | 3             | 0           | 7     | 
 | Total            | 12         | 65            | 6           | 83    | 
 | Distribuição (%) | 14,8%      | 80,2%         | 5%          |       | 
 
@@ -747,7 +740,7 @@ A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTI
 | CGTIC            | 2          | 3             | 0           | 5     | 
 | COINT            | 4          | 60            | 2           | 66    | 
 | COSIS            | 5          | 0             | 4           | 9     | 
-| CGOVE            | 8          | 0             | 0           | 8     | 
+| CGOTI            | 8          | 0             | 0           | 8     | 
 | Total            | 19         | 63            | 6           | 88    | 
 | Distribuição (%) | 21,59%     | 71,59%        | 6,81%       |       | 
 
@@ -758,7 +751,7 @@ A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTI
 | CGTIC            | 1          | 4             | 2           | 7     | 
 | COINT            | 7          | 49            | 4           | 60    | 
 | COSIS            | 5          | 1             | 1           | 7     | 
-| CGOVE            | 5          | 3             | 0           | 8     | 
+| CGOTI            | 5          | 3             | 0           | 8     | 
 | Total            | 18         | 57            | 7           | 82    | 
 | Distribuição (%) | 21,95 %    | 69,51 %       | 8,54 %      |       | 
 
