--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -92,7 +92,7 @@ A execução deste Plano Diretor dar-se-á no período de 2018 a 2020, devendo s
 ## 1.1 Estrutura Organizacional
 Atual estrutura regimental do MinC é regida pelo Decreto nº 9.411, de 18 de Junho de 2018:
 
-![orgminc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/orgminc.jpg "Estrutura Organizacional do MinC.")
+![orgminc](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/orgminc.jpg "Estrutura Organizacional do MinC.")
 
 O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 6 regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
 
@@ -128,11 +128,11 @@ A CGTIC propõe diretrizes e implementa políticas de Tecnologia da Informação
 
 A atual posição da CGTIC na estrutura do MinC está apresentada abaixo:
 
-![cgtecnominc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecnominc.png "Posição da CGTIC no MINC.")
+![cgtecnominc](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/cgtecnominc.png "Posição da CGTIC no MINC.")
 
 Após a reestruturação do MinC, promovida pelo Decreto nº 9.411, de 18 de Junho de 2018, a atual estrutura da CGTIC está apresentada abaixo:
 
-![cgtecatual](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtic.jpg "Estrutura Atual da CGTIC.")
+![cgtecatual](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/cgtic.jpg "Estrutura Atual da CGTIC.")
 
 Ressalta-se que a estrutura da CGTIC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016, e após pelo decreto Decreto nº 9.411, de 18 de Junho de 2018. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 6, ou seja, uma redução na ordem de 50%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TIC executados concorrentemente, como pode ser constatado no histórico deste plano.
 
@@ -140,7 +140,7 @@ Ressalta-se que a estrutura da CGTIC sofreu redução em seu quadro de pessoal, 
 
 Percebe-se que a estrutura da CGTIC conta com uma divisão funcional estruturada de acordo com as necessidades básicas da TIC do órgão. Porém, se faz necessário realizar ajustes para que as estruturas possam funcionar de forma mais eficiente, e com capacidade de inovação, como demonstra a figura abaixo.
 
-![proposta](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/proposta.jpg "Proposta de Estrutura ideal da CGTIC")
+![proposta](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/proposta.jpg "Proposta de Estrutura ideal da CGTIC")
 
 A definição de uma Divisão de Mobilidade e Usabilidade se faz necessária na Coordenação de Desenvolvimento de Sistemas para que a mesma possa garantir a satisfação dos usuários nas suas entregas, baseando-se não apenas na entrega das funcionalidades, mas sim na entrega de uma solução simples e intuitivas, com foco no maior fenômeno da última década, a expansão da utilização de tecnologias móveis.
 
@@ -164,7 +164,7 @@ A EGD se baseia em nove princípios que orientam as atividades de governança di
 
 Também são propostos dez objetivos estratégicos, organizados em três eixos estratégicos: Acesso à Informação, Prestação de Serviços e Participação Social, conforme ilustrado a seguir:
 
-![egd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/egd.png "Diagrama Estratégico da EGD")
+![egd](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/egd.png "Diagrama Estratégico da EGD")
 
 Percebe-se que a EGD busca estimular as ações de convergência de esforços quanto às infraestruturas, plataformas, sistemas e serviços entre os órgãos. Nesse sentido, o Ministério da Cultura já vem realizando diversas ações tanto com os órgãos integrantes do sistema MinC, por meio de um Comitê Integrado com representantes da TIC de todos os órgãos (será detalhado adiante), como, também, por meio de parcerias com outros entes públicos externos ao sistema MinC.
 
@@ -174,7 +174,7 @@ Nessa toada, vale destacar que o PDTIC MinC 2015-2017 foi completamente revisado
 
 O mapa estratégico do Ministério da Cultura – MinC está estruturado em três perspectivas: Inovação e Pessoas, Resultados Institucionais e Referencial Estratégico. Essas perspectivas representam um encadeamento lógico da estratégia de atuação do órgão. Cada uma engloba um conjunto de objetivos estratégicos que retratam os principais desafios a serem enfrentados pelo MinC no alcance de sua visão de futuro e no cumprimento de sua missão institucional. As perspectivas, quando vistas em conjunto, permitem uma visão completa da estratégia da instituição e contam a história da estratégia de uma forma clara e de fácil compreensão.
 
-![estrategiaminc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/estrategiaminc.png "Mapa Estratégico do Ministério da Cultura.") 
+![estrategiaminc](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/estrategiaminc.png "Mapa Estratégico do Ministério da Cultura.") 
 
 Destaca-se do mapa estratégico acima, a preocupação do Ministério com a inovação por meio da modernização da Tecnologia da Informação. Nota-se que a Tecnologia da Informação é um elemento essencial para o desenvolvimento das políticas públicas culturais, permeando praticamente todas as atividades do Ministério, em função de sua natureza transversal, que presta suporte tecnológico a todas as unidades da organização.  
 
@@ -392,7 +392,7 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 
 A elaboração deste PDTIC orientou-se pelas boas práticas estabelecidas no documento Guia de PDTIC do SISP. O fluxo de execução do projeto de elaboração seguiu o modelo proposto pela Secretaria de Tecnologia da Informação e Comunicação – SETIC do Ministério do Planejamento, por meio da metodologia que orienta a realização em três fases principais:
 
-![abc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/abc.png "Metodologia de Elaboração do PDTIC.")
+![abc](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/abc.png "Metodologia de Elaboração do PDTIC.")
 
 ## 5.1 Preparação
 
@@ -452,7 +452,7 @@ Importante frisar que as ações tomadas para antender as necessidades levantada
 
 Para executar a gestão dos projetos de TIC é utilizada a Metodologia de Gestão de Projetos de TIC – MGP-TI, baseada nos conceitos do Projects IN Controlled Environments - PRINCE2, que permite a gestão compartilhada das decisões dos projetos com os seus interessados, além de oferecer um controle detalhado do escopo, prazo, custos, qualidade e riscos dos projetos de TI.
 
-![mgpti](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/mgpti.png "Ciclo de vida de um projeto, de acordo com a MGP-TI.")
+![mgpti](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/mgpti.png "Ciclo de vida de um projeto, de acordo com a MGP-TI.")
 
 Esta definição foi formalizada com a Portaria No 687, de 20 de Outubro de 2015, publicada no Boletim Administrativo, Edição Extra, de 20 de outubro de 2015. Tal portaria dispõe sobre a Metodologia de Gerenciamento de Projetos de Tecnologia da Informação – MGP-TI, no Ministério da Cultura.
 
